-not completed yet- Linked the db with the app

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,4 +12,6 @@
     <li><a href="{{url_for('show_products', category='Clothes')}}">Clothes</a></li>
 </ul>
 
+<a href="{{url_for('add_product')}}">Add a new product</a>
+
 {% endblock %}
