--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,6 @@
     h1 {
     font-size: 3em;
-    color: red;
+    color: rgb(248, 240, 240);
     margin-top: 40px;
     text-align: center;
     letter-spacing: -2px;
@@ -16,11 +16,6 @@
     }
  
     body {
-        background-color: pink;
+        background-color: rgb(197, 197, 197);
     }
       
-    @media (min-width: 30em) {
-        body {
-          background-color: rgb(116, 113, 113);
-        }
-    }
