--- a/templates/addproduct.html
+++ b/templates/addproduct.html
@@ -12,7 +12,15 @@
         <tr>
             <td>{{ form.quantity.label }}</td>
             <td>{{ form.quantity }}</td>
-        </tr>   
+        </tr>
+        <tr>
+            <td>{{ form.price.label }}</td>
+            <td>{{ form.price }}</td>
+        </tr> 
+        <tr>
+            <td>{{ form.category.label }}</td>
+            <td>{{ form.category }}</td>
+        </tr>    
         <tr>
             <td>{{ form.description.label }}</td>
             <td>{{ form.description }}</td>
