--- a/templates/product-details.html
+++ b/templates/product-details.html
@@ -4,10 +4,11 @@
 
 <h2>{{ product.name }}</h2>
 
-<img src="{{url_for('static', filename = product.image )}}" align="left" />
+<img src="{{url_for('static', filename = product.filename )}}" align="left" />
 
 <ul>
     <li>remains in stock : {{ product.quantity }}</li>
+    <li>this item costs : {{ product.price }} DA</li>
     <li>{{ product.description }}</li>
 </ul>
 
